apps/weavesocks/front-end-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-internal
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    name: front-end
  namespace: sock-shop
spec:
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 8079
  selector:
    name: front-end
